Stop steam overflow. Sorted aspect ratio.

--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ body {
   position: relative;
   background-color: grey;
   width: 900px;
-  height: 670px;
+  height: 650px;
   margin: 0 auto; }
 
 /* UPPER BANK */
@@ -580,7 +580,7 @@ body {
   top: 0px;
   left: 50px;
   width: 100px;
-  height: 670px;
+  height: 650px;
   z-index: 1;
   background-image: url(images/textures/ladder.png);
   background-size: 100px 70px;
@@ -692,7 +692,7 @@ body {
   position: relative;
   background-color: green;
   width: 900px;
-  height: 15%;
+  height: 140px;
   margin: 0 auto; }
 
 #steam_stats {
